Update swagger.json and routes
