# routes/API/reviews.js
@@ -5,14 +5,19 @@ var { send_error } = require("../../functions/error");
 var {
   check_user_token,
   user_check,
+  checkPermission,
 } = require("../../functions/middleware");
 
 // create the router
 var router = express.Router();
 
 // the route for posting a review
-router.post("/add", check_user_token, function(req, res, next){
+router.post("/add", check_user_token, checkPermission("POST_REVIEW"), function(req, res, next){
     let token = req.headers['authorization'];
+    if(!token) return res.status(401).send({
+        status: 401,
+        message: "Unauthorized"
+    })
     token = token.split(" ");
     db.query("SELECT * FROM users WHERE token = ?", [token[1]], function(err, results){
         let userId = results[0].id;
@@ -31,8 +36,42 @@ router.post("/add", check_user_token, function(req, res, next){
     });
 });
 
-// the route for getting all reviews for a car
+// /reviews the route to view all the reviews
+router.get("/", function(req, res, next){
+    db.query("SELECT * FROM reviews", function(err, results){
+        if (err){
+            send_error(err, "Error getting reviews");
+            res.status(500).send({status: 500, message: "Error getting reviews"});
+        } else {
+            res.send({status: 200, message: "Reviews", data: results});
+        }
+    });
+});
 
-// the route for getting all reviews that the users posted
+// /reviews/car/{carId} the route for getting all reviews for a car
+router.get("/car/:carId", function(req, res, next){
+    let carId = req.params.carId;
+    db.query("SELECT * FROM reviews WHERE car_id = ?", [carId], function(err, results){
+        if (err){
+            send_error(err, "Error getting reviews");
+            res.status(500).send({status: 500, message: "Error getting reviews"});
+        } else {
+            res.send({status: 200, message: "Reviews", data: results});
+        }
+    });
+});
+
+// /reviews/user/{userId} the route for getting all reviews that the users posted
+router.get("/user/:userId", function(req, res, next){
+    let userId = req.params.userId;
+    db.query("SELECT * FROM reviews WHERE user_id = ?", [userId], function(err, results){
+        if (err){
+            send_error(err, "Error getting reviews");
+            res.status(500).send({status: 500, message: "Error getting reviews"});
+        } else {
+            res.send({status: 200, message: "Reviews", data: results});
+        }
+    });
+});
 
 module.exports = router;
